changed padding of hero text xontainer to prevent spill

--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ p {
   }
 
   .hero-description-container {
-    padding: 50px;
+    padding: 40px;
     position: relative;
     display: flex;
     display: -webkit-flex;
